[package]
name = "basic-sqs"
version = "0.1.0"
authors = ["Rogerio <rogermm@gmail.com>"]
edition = "2021"

[dependencies]
aws_lambda_events = "0.12.1"
lambda_runtime = "0.8.3"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


